--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-Hello.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="stroll-meta" content="404POISON">
+    <title>Isaac Struhl</title>
+
+	<link rel="apple-touch-icon" sizes="57x57" href="/assets/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/assets/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/assets/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/assets/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/assets/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/assets/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/assets/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/assets/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/assets/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/assets/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Work+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="/css/stroll.css"/>
+    <link rel="stylesheet" href="/css/custom.css"/>
+
+    <script src="/js/stroll.js"></script>
+    <script src="/js/strollmap.js"></script>
+</head>
+
+<body>
+<div id="stroll">
+    <div id="stroll-view">
+        <div id="stroll-main" class="strollpage"></div>
+        <div id="stroll-up" class="strollpage"></div>
+        <div id="stroll-down" class="strollpage"></div>
+        <div id="stroll-left" class="strollpage"></div>
+        <div id="stroll-right" class="strollpage"></div>
+    </div>
+    <div id="stroll-nav"></div>
+</div>
+</body>
+</html>
