--- a/pages/facts.html
+++ b/pages/facts.html
@@ -2,12 +2,11 @@
     <div class="container">
         <h1>Facts</h1>
         <div class="text">
-            <p>22 years old</p>
+            <p>23 years old</p>
             <p>from Weston, MA</p>
-            <p>Weston High School class of 2017</p>
-            <p>Harvard College class of 2022</p>
-            <p>Concurrently studying Physics (bachelor's) and Computer Science (master's)</p>
-            <p>Taking this year off to work on my company, <a href="https://distributedspectrum.com">Distributed Spectrum</a></p>
+	    <p>Harvard, 2021</p>
+	    <p>A.B. Physics, S.M. Computer Science</p>
+	    <p>Co-founder, <a href="https://distributedspectrum.com">Distributed Spectrum</a></p>
         </div>
         <h1>Factoids</h1>
         <div class="text">
