I don't hate to talk about ML anymore, and added a link to printing.

--- a/pages/about.html
+++ b/pages/about.html
@@ -2,7 +2,7 @@
     <div class="container">
         <h1>About</h1>
         <div class="text">
-            <p>I'm interested in computer systems, security, algorithms, and as much as I hate to admit it, machine learning. I initially started with biology, which quickly led to computational biology, and then just algorithms and computer systems as I realized that I enjoyed questions in computer science the most. My industry experience comes primarily from Google, as a software engineering intern working on a large scale autocomplete service. I'm now one of three co-founders of <a href="https://distributedspectrum.com">Distributed Spectrum</a>, a Harvard-based startup that provides persistent radio frequency monitoring for defense and industrial applications.</p>
+            <p>I'm interested in computer systems, security, algorithms, and machine learning. I initially started with biology, which quickly led to computational biology, and then just algorithms and computer systems as I realized that I enjoyed questions in computer science the most. My industry experience comes primarily from Google, as a software engineering intern working on a large scale autocomplete service. I'm now one of three co-founders of <a href="https://distributedspectrum.com">Distributed Spectrum</a>, a Harvard-based startup that provides persistent radio frequency monitoring for defense and industrial applications.</p>
         </div>
         <h2>Other Resources</h2>
         <div class="text" style="width: 40%; margin: 0 auto;">
